<resources>
    <string name="app_name">Boupon</string>

    <!-- TODO: UI Strings -->
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_otp">enter OTP</string>
    <string name="name">name</string>
    <string name="get_otp">Get Verification Code</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="mobile_recharge">MOBILE RECHARGE</string>
    <string name="prepaid">prepaid</string>
    <string name="postpaid">postpaid</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">email</string>
    <!-- TODO: UI Strings -->

    <!-- TODO: Error Messages -->
    <string name="err_name">Please provide your name.</string>
    <string name="err_phone">Please provide your phone number correctly.</string>
    <string name="err_email">Please provide your email with valid email id.</string>
    <string name="err_connect">Something went work.</string>
    <string name="err_password">Please provide the password and your password is must contain atleast 6 characters</string>
    <string name="expires">Expires : </string>
    <string name="select">Select</string>
    <!-- TODO: Error Messages -->


    <string name="taka">৳</string>
    <string name="purchase_history">Purchase History</string>
    <string name="title_activity_dummy">Dummy</string>
    <string name="no_offers">No Offers</string>
    <string name="cart">Cart</string>
    <string name="boupon_wallet">boupon wallet</string>
    <string name="transaction">Transaction</string>
    <string name="boupon_services">BOUPON SERVICES</string>
    <string name="fast_recharge">SPEED RECHARGE</string>

    <string name="new_payment">New Payment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">change</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="recharge">Recharge</string>
    <string name="recent_payment">Recent Payment</string>
    <string name="stores">Stores</string>
    <string name="Spotlight">Spotlight</string>
    <string name="product_details">Product Details</string>
    <string name="save">Save</string>
    <string name="similar_products">Similar Products</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="spFileUser">spFileUser</string>
    <string name="userId">userId</string>
    <string name="please_wait">Please wait...</string>
    <string name="userLoginToken">userLoginToken</string>
    <string name="userLoginID">userLoginID</string>
    <string name="userLoginEmail">userLoginEmail</string>
    <string name="userLoginPhone">userLoginPhone</string>
    <string name="net_err">Network Problem</string>
    <string name="logout">Logout</string>
    <string name="paid_successfully">Paid Successfully</string>
    <string name="payment_status">Payment Status</string>
    <string name="paid_unsccess">Payment Unsuccessful</string>
    <string name="title_activity_free_deals_recharge">FreeDealsRechargeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="deal_name">Deal Name</string>
    <string name="no_desc">Deal Description</string>
    <string name="value">Value</string>
    <string name="amount">Amount</string>
    <string name="add_deal">Add Deal</string>
    <string name="amount_left">Amount Left</string>
    <string name="deal_value">Deal Value</string>
    <string name="delete">Delete</string>
    <string name="added_deals">Added Deals</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="no_items_in_cart">Cart Empty</string>
    <string name="no_items_in_wishlist">Wishlist Empty</string>
    <string name="quantity">Quantity</string>
    <string name="edit">Edit</string>
    <string name="total_amount">Total Amount</string>
    <string name="add">Add</string>
    <string name="shipping_adress">Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="description">Description : </string>
    <string name="mobile">Mobile</string>
    <string name="in_email">Email</string>
    <string name="Name">Name</string>
    <string name="coupon">Coupon</string>
    <string name="my_coupons">My Coupons</string>
    <string name="redeem">Redeem</string>
    <string name="not_now">later</string>
    <string name="alert_message_coupon">Do you want to redeem this coupon ?</string>
    <string name="skip">Skip</string>
    <string name="title_slide3">My Coupons</string>
    <string name="desc_slide3">Redeem your coupons and get discount on the deals</string>
    <string name="title_slide2">Free Deals</string>
    <string name="desc_slide2">Get exciting free deals for every recharge and many more.</string>
    <string name="title_slide1">Mobile Recharge</string>
    <string name="desc_slide1">Recharge your mobile and unlock deals in just three simple steps.</string>
    <string name="start">start</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>

    <string name="redeem_coupon">My Coupons</string>
    <string name="points">Points</string>
    <string name="no_coupon">No Coupons</string>
    <string name="no_recharge_contacts">No recharge contacts</string>
    <string name="no_transaction">No Transaction</string>
    <string name="my_transactions">My Transactions</string>
    <string name="termsandcondition">Terms and Conditions : </string>
    <string name="proceed">Proceed</string>
    <string name="confirm_pass">confirm password</string>
    <string name="store_details">Store Details : </string>
    <string name="user_already_registered">Sorry, the user is already registered with this mobile number.</string>
    <string name="category">Category : </string>
    <string name="view">see more</string>

    <string name="oops">Oops something went wrong.\nPlease try again !!</string>
    <string name="retry">retry</string>
    <string name="points_left">Points left</string>
    <string name="sp_location_file">sp_location_file</string>
    <string name="lat">lat</string>
    <string name="lng">lng</string>
    <string name="sp_file_is_first_loaded">sp_file_is_first_loaded</string>
    <string name="isFirstTimeLoadedFragment">isFirstTimeLoadedFragment</string>
    <string name="location">location Off</string>
    <string name="auto_detect_location">auto detect location</string>
    <string name="or">OR</string>
    <string name="pick_a_locality">pick a locality</string>
    <string name="showing_nearest">showing the nearest deals around you !!</string>
    <string name="redeemed_message">Coupon is already redeemed</string>
    <string name="points_insufficient">The points are not sufficient.</string>
    <string name="points_equal_to_amount">Amount is equal to the points, cannot add more deals now !!</string>
    <string name="location_picker">Location Picker</string>
    <string name="pick_a_city">pick a city</string>
    <string name="password_char_err">password must contain atleast 6 characters</string>
    <string name="back">Back</string>
    <string name="inssuficient_amount">Insufficient Amount</string>
    <string name="referral_code">referral code - optional</string>
    <string name="referral_code_msg">referral code is not a compulsory field</string>
    <string name="gift">gift</string>
    <string name="from_contacts">from contacts</string>
    <string name="apps">Apps</string>
    <string name="using_third_party_apps">using third party apps</string>
    <string name="select_gift_option">Select gift option</string>
    <string name="phone">Phone</string>
    <string name="redeemed">REDEEMED</string>
    <string name="giftCouponToken">giftCouponToken</string>
    <string name="congratulations">Congratulations!</string>
    <string name="view_gift">view</string>
    <string name="coupon_received_message">You have received a new coupon</string>


    <!--TODO: Facebook -->
    <string name="facebook_app_id">348124368914499</string>
    <string name="fb_login_protocol_scheme">fb348124368914499</string>



</resources>
