<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/menu_home"
        android:title="@string/home"
        app:showAsAction="withText"
        />

    <item android:id="@+id/menu_offers"
        android:icon="@drawable/menu_coupon"
        android:title="@string/offers"
        app:showAsAction="withText"
        />

    <item android:id="@+id/menu_profile"
        android:icon="@drawable/menu_user"
        android:title="@string/profile"
        app:showAsAction="withText"
        />

    <item android:id="@+id/menu_settings"
        android:icon="@drawable/menu_settings"
        android:title="@string/settings"
        app:showAsAction="withText"
        />

</menu>
