<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_single_food"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:background="@android:color/transparent"
    tools:context="com.an2t.android.bouponapp.recharge.FreeDealsRechargeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/rl_frame_single_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@android:color/black"
                android:scaleType="centerCrop"
                />

            <View
                android:id="@+id/img_back_product"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:background="@color/black_trans" />

            <TextView
                android:id="@+id/tv_single_deal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="70dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/deal_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_single_deal_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_single_deal_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:text="@string/no_desc"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <RelativeLayout

                android:id="@+id/ll_main_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_single_deal_desc"
                android:layout_marginTop="8dp"
                android:background="@color/blue">

                <TextView
                    android:layout_marginTop="@dimen/sixteen"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tv_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123"
                    android:textColor="@android:color/white"
                    android:textSize="50sp" />

                <TextView

                    android:id="@+id/tv_value_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_value"
                    android:layout_centerHorizontal="true"
                    android:text="@string/value"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_marginBottom="@dimen/sixteen"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/sixteen"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tv_value_content"
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_message_coupon" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/ll_main_container"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_later"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:background="@color/light_green"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/not_now"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_gift"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:background="@color/light_pink"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/gift"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_redeem"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:background="@color/indian_red"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/redeem"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_for_single_deal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:background="@drawable/white_circle"
        android:elevation="4dp"
        android:src="@drawable/boupon_logo"
        app:civ_border_color="@color/light_green"
        app:civ_border_width="3dp" />


</RelativeLayout>
