<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/light_green">


    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/tv_choose_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_gift_option"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_close" />



    <FrameLayout

        android:id="@+id/main_back_dialog_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_info">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <FrameLayout
                android:id="@+id/img_apps"
                android:layout_width="0dp"
                android:layout_height="185dp"
                android:layout_weight="1"
                android:background="@color/color_three">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/apps"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/using_third_party_apps"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/img_contacts"
                android:layout_width="0dp"
                android:layout_height="185dp"
                android:layout_weight="1"
                android:background="@color/blue">



                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_phone_book_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_contacts"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_back_white">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="OR"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </FrameLayout>

    </FrameLayout>

</RelativeLayout>


