<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_container"
    android:layout_height="match_parent"
    android:background="@drawable/img_back_login"
    tools:context="com.an2t.android.bouponapp.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/rl_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/forty"
                android:layout_marginTop="@dimen/sixteen">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_marginTop="@dimen/forty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <EditText

                android:id="@+id/in_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/shimmer_view_container"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/sixty_four"
                android:background="@drawable/edit_text_back_login"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11"
                android:padding="@dimen/sixteen"
                android:textColor="@color/gray_login_drawable"
                android:textSize="@dimen/btn_login_text_size" />

            <EditText
                android:id="@+id/in_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/in_phone_number"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/margin_edit_text_top"
                android:background="@drawable/edit_text_back_login"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/sixteen"
                android:textColor="@color/gray_login_drawable"
                android:textSize="@dimen/btn_login_text_size" />


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_btn_height"
                android:layout_below="@id/in_password"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:background="@drawable/btn_sign_in"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_login_text_size" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_btn_height"
                android:layout_below="@+id/btn_sign_in"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:background="@drawable/btn_register"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_login_text_size" />

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="12dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_login_text_size" />

        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
