<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_container"
    android:background="@drawable/img_back_login"
    tools:context="com.an2t.android.bouponapp.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/forty"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <EditText
                android:layout_marginTop="@dimen/sixty_four"
                android:inputType="number"
                android:id="@+id/in_token"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/img_logo"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:background="@drawable/edit_text_back_login"
                android:hint="@string/enter_otp"
                android:lines="1"
                android:padding="@dimen/sixteen"
                android:textColor="@color/gray_login_drawable"
                android:textSize="@dimen/btn_login_text_size" />

            <EditText

                android:id="@+id/in_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@id/in_token"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/margin_edit_text_top"
                android:background="@drawable/edit_text_back_login"


                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/sixteen"
                android:textColor="@color/gray_login_drawable"
                android:textSize="@dimen/btn_login_text_size" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/in_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_below="@+id/in_password"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/margin_edit_text_top"
                android:background="@drawable/edit_text_back_login"
                android:hint="@string/confirm_pass"
                android:lines="1"
                android:padding="@dimen/sixteen"
                android:textColor="@color/gray_login_drawable"
                android:textSize="@dimen/btn_login_text_size" />




            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_btn_height"
                android:layout_below="@id/in_password_confirm"
                android:layout_marginLeft="@dimen/margin_edit_text"
                android:layout_marginRight="@dimen/margin_edit_text"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:background="@drawable/btn_sign_in"
                android:text="@string/proceed"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_login_text_size" />



        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


